plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.8'
    id 'com.gluonhq.client-gradle-plugin' version '0.1.23'
}

mainClassName = 'com.openjfx.database.app.DatabaseFX'
sourceCompatibility = 14

applicationDefaultJvmArgs = ['-Djdk.gtk.version=2', '-Dsun.java2d.opengl=true']

gluonClient {
    graalvmHome = "/home/yangkui/application/graalvm"
}

group 'com.openjfx.database'
version 'alpha'

javafx {
    version = "14.0.1"
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.base', 'javafx.graphics']
}


//gluonClient {
//    target = 'host'
//    compilerArgs = [
//            '-Dio.netty.noUnsafe = true',
//            '--initialize-at-run-time=io.netty .handler.codec.http.HttpObjectEncoder',
//            '--initialize-at-run-time=io.netty.handler.codec.http2.Http2CodecUtil',
//            '--initialize-at-run-time=io.netty .handler.codec.http2.DefaultHttp2FrameWriter',
//            '--initialize-at-run-time=io.netty.handler.codec.http.websocketx .WebSocket00FrameEncoder',
//            '--initialize-at-run-time=io.netty.resolver.dns.DefaultDnsServerAddressStreamProvider',
//            '--initialize-at-run-time=io.netty.util.AbstractReferenceCounted,io.netty.util.concurrent.GlobalEventExecutor,io.netty.util.concurrent.ImmediateEventExecutor,io.netty.util.concurrent.ScheduledFutureTask,io.netty.util.internal.ThreadLocalRandom',
//            '--report-unsupported-elements-at-runtime'
//    ]
//}

dependencies {
    compile project(":common")
    compile project(":mysql")
    compile group: 'org.controlsfx', name: 'controlsfx', version: '11.0.1'
    compile group: 'org.fxmisc.richtext', name: 'richtextfx', version: '0.10.4'
}

//解决window平台下中文乱码问题
tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

jar {
    from {
        //添加依懒到打包文件
        configurations.runtime.collect { zipTree(it) }
    }
    manifest {
        attributes "Manifest-Version": 1.0
        attributes 'Main-Class': 'com.openjfx.database.app.DatabaseFX'
        attributes 'Multi-Release': true
    }
}

//jlink {
//     comment_line './graalvm/bin/jlink --module-path /home/yangkui/application/javafx-jmods-11.0.2/ --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics,java.logging,java.management --output /home/yangkui/runtine'
//}